--- a/vendor.html
+++ b/vendor.html
@@ -201,7 +201,7 @@
                                                     </ul>
                                                 </li>
                                                 <li><a href="#">Pages</a></li>
-                                                <li><a href="vendor.html">Vendor</a></li>
+                                                <li><a href="#">Vendor</a></li>
                                                 <li><a href="#">Blog<i class="ti-angle-down"></i></a>
                                                     <ul class="dropdown">
                                                         <li><a href="blog-single-sidebar.html">Blog Single Sidebar</a></li>
@@ -231,7 +231,7 @@
                     <div class="bread-inner">
                         <ul class="bread-list">
                             <li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
-                            <li class="active"><a href="blog-single.html">Checkout</a></li>
+                            <li class="active"><a href="vendor.html">Vendor</a></li>
                         </ul>
                     </div>
                 </div>
@@ -587,50 +587,6 @@
                             </div>
                         </form>
                         <!--/ End Form -->
-                    </div>
-                </div>
-                <div class="col-lg-4 col-12">
-                    <div class="order-details">
-                        <!-- Order Widget -->
-                        <div class="single-widget">
-                            <h2>CART TOTALS</h2>
-                            <div class="content">
-                                <ul>
-                                    <li>Sub Total<span>$330.00</span></li>
-                                    <li>(+) Shipping<span>$10.00</span></li>
-                                    <li class="last">Total<span>$340.00</span></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!--/ End Order Widget -->
-                        <!-- Order Widget -->
-                        <div class="single-widget">
-                            <h2>Payments</h2>
-                            <div class="content">
-                                <div class="checkbox">
-                                    <label class="checkbox-inline" for="1"><input name="updates" id="1" type="checkbox"> Check Payments</label>
-                                    <label class="checkbox-inline" for="2"><input name="news" id="2" type="checkbox"> Cash On Delivery</label>
-                                    <label class="checkbox-inline" for="3"><input name="news" id="3" type="checkbox"> PayPal</label>
-                                </div>
-                            </div>
-                        </div>
-                        <!--/ End Order Widget -->
-                        <!-- Payment Method Widget -->
-                        <div class="single-widget payement">
-                            <div class="content">
-                                <img src="images/payment-method.png" alt="#">
-                            </div>
-                        </div>
-                        <!--/ End Payment Method Widget -->
-                        <!-- Button Widget -->
-                        <div class="single-widget get-button">
-                            <div class="content">
-                                <div class="button">
-                                    <a href='#' class="btn">proceed to checkout</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!--/ End Button Widget -->
                     </div>
                 </div>
             </div>
